--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,19 +1,3 @@
-.green{
-    background-color: rgba(118, 196, 174, .85);
-}
-
-.blue{
-    background-color: rgba(35, 47, 62, .85);
-}
-
-.red{
-    background-color: rgba(216, 108, 112, .85);
-}
-
-.light-blue{
-    background-color: rgba(35, 169, 225, .85);
-}
-
 body{
     font-family: Corbel, sans-serif;
     color: rgb(67, 74, 86);
@@ -34,9 +18,10 @@ h2, h2:first-child{
     margin-top: 50px;
 }
 
-.center{
-    text-align: center;
-    margin-top: 3%;
+hr{
+    margin: 0 0 30px 0;
+    width: 360px;
+    background-color: rgb(67, 74, 86);
 }
 
 .ui.secondary.button{
@@ -46,6 +31,27 @@ h2, h2:first-child{
 .ui.secondary.pointing.menu{
     padding: 0 5% 0 5%;
     margin: 0;
+}
+
+.green{
+    background-color: rgba(118, 196, 174, .85);
+}
+
+.blue{
+    background-color: rgba(35, 47, 62, .85);
+}
+
+.red{
+    background-color: rgba(216, 108, 112, .85);
+}
+
+.light-blue{
+    background-color: rgba(35, 169, 225, .85);
+}
+
+.center{
+    text-align: center;
+    margin-top: 3%;
 }
 
 .content-wrapper{
@@ -66,12 +72,6 @@ h2, h2:first-child{
     padding-top: 100px;
 }
 
-hr{
-    margin: 0 0 30px 0;
-    width: 360px;
-    background-color: rgb(67, 74, 86);
-}
-
 .avatar{
     color: white;
     margin: 3%;
@@ -81,6 +81,16 @@ hr{
     text-align: center;
 }
 
-#aboutButton{
-    margin-top: 150px;
+.buttonClass{
+  font-weight: bold;
+  width: 200px;
+  height: 35px;
+  padding-top: 5px;
+  border-radius: 5px;
+  margin: auto;
+}
+
+.moveDown{
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
