--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,6 +90,26 @@ hr{
   margin: auto;
 }
 
+.buttonClassLeft{
+  font-weight: bold;
+  width: 44%;
+  height: 35px;
+  padding-top: 5px;
+  border-radius: 5px;
+  margin: auto;
+  float: left;
+}
+
+.buttonClassRight{
+  font-weight: bold;
+  width: 44%;
+  height: 35px;
+  padding-top: 5px;
+  border-radius: 5px;
+  margin: auto;
+  float: right;
+}
+
 .moveDown{
   margin-top: 100px;
   margin-bottom: 50px;
